syntax = "proto3";
package provenance.msgfees.v1;

import "gogoproto/gogo.proto";
import "provenance/msgfees/v1/msgfees.proto";

option go_package          = "github.com/provenance-io/provenance/x/msgfees/types";
option java_package        = "io.provenance.msgfees.v1";
option java_multiple_files = true;

// GenesisState contains a set of msg based fees, persisted from the store
message GenesisState {
  repeated MsgBasedFee msg_based_fees = 1 [(gogoproto.nullable) = false];
}
